Better lighting and shape combining. Partial flower.

--- a/CS4201Practical2Part3.html
+++ b/CS4201Practical2Part3.html
@@ -27,7 +27,7 @@
 
       // Create the objects to render.
       let benchObject = bench();
-      let object2 = cube();
+      let object2 = flower();
       let object3 = cube();
 
       // Initialise the object's buffers and edit the model matrix of each to place them in the world.
