--- a/CS4201Practical2Part2.html
+++ b/CS4201Practical2Part2.html
@@ -34,7 +34,6 @@
       let buffers3 = initObject(object3, shaderprogram);
       mat4.fromRotationTranslationScale(buffers3.model, quat.create(), [-1, 0, 0], [0.3, 0.3, 0.3]);
       let buffers = [buffersBench, buffers2, buffers3];
-      let directions = [[-0.005, 0.05, 0.0], [0.05, 0, 0], [0, 0.05, 0]];
 
       // This function will allow recursion by combining object's model with parent's
       returnM = function (object, time) {
@@ -93,9 +92,8 @@
       gl.uniformMatrix4fv(PerspLoc, false, new Float32Array(P));
 
       // Initialise working matrices.
-      // This lets the objects be rotated over time with the additional directions vectors.
+      // This lets the objects be changed over time using additional vectors.
       let M = mat4.create();
-      let R = mat4.create();
       let Norm = mat4.create();
       let MV = mat4.create();
 
