Finished flower and added lamppost

--- a/CS4201Practical2Part2.html
+++ b/CS4201Practical2Part2.html
@@ -25,7 +25,7 @@
       // Create the objects to render.
       let benchObject = bench();
       let object2 = flower();
-      let object3 = cube();
+      let object3 = lamppost();
 
       // Initialise the object's buffers and edit the model matrix of each to place them in the world.
       let buffersBench = initObject(benchObject, shaderprogram);
