Re-added normal textures to part 4

--- a/CS4201Practical2Part4.html
+++ b/CS4201Practical2Part4.html
@@ -34,9 +34,9 @@
       let object3 = lamppost();
 
       // Initialise the object's buffers.
-      let buffersBench = initObject(benchObject, shaderprogram, "textures/CubeFaces.png");
-      let buffers2 = initObject(object2, shaderprogram, "textures/CubeFaces.png");
-      let buffers3 = initObject(object3, shaderprogram, "textures/CubeFaces.png");
+      let buffersBench = initObject(benchObject, shaderprogram, "textures/marble10 diffuse 1k.jpg");
+      let buffers2 = initObject(object2, shaderprogram, "textures/wood 01 Diffuse.jpg");
+      let buffers3 = initObject(object3, shaderprogram, "textures/bricks.png");
       let buffers = [buffersBench, buffers2, buffers3];
 
       // Load the skybox texture into the object shader program to let them reflect it using environment mapping.
